--- a/WiT/WiT/administrate.ui
+++ b/WiT/WiT/administrate.ui
@@ -63,11 +63,14 @@ font-family: Roboto;</string>
   <widget class="QLineEdit" name="searchField">
    <property name="geometry">
     <rect>
-     <x>1080</x>
+     <x>1110</x>
      <y>150</y>
      <width>241</width>
      <height>51</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font-size: 22px;</string>
    </property>
    <property name="text">
     <string/>
@@ -131,7 +134,7 @@ QTableView::item {
   <widget class="QPushButton" name="clearSearchButton">
    <property name="geometry">
     <rect>
-     <x>990</x>
+     <x>1020</x>
      <y>150</y>
      <width>71</width>
      <height>51</height>
@@ -200,7 +203,7 @@ QRadioButton::indicator {
    </property>
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>150</x>
      <y>150</y>
      <width>51</width>
      <height>51</height>
@@ -219,7 +222,7 @@ QRadioButton::indicator {
    </property>
    <property name="geometry">
     <rect>
-     <x>240</x>
+     <x>220</x>
      <y>150</y>
      <width>51</width>
      <height>51</height>
@@ -257,6 +260,19 @@ background-color:#ff7d7d;
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="sortingButton">
+   <property name="geometry">
+    <rect>
+     <x>870</x>
+     <y>150</y>
+     <width>111</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Sorting</string>
    </property>
   </widget>
  </widget>
