--- a/WiT/WiT/mainwindow.ui
+++ b/WiT/WiT/mainwindow.ui
@@ -31,8 +31,8 @@
       <property name="geometry">
        <rect>
         <x>590</x>
-        <y>410</y>
-        <width>311</width>
+        <y>310</y>
+        <width>321</width>
         <height>71</height>
        </rect>
       </property>
@@ -44,8 +44,8 @@
       <property name="geometry">
        <rect>
         <x>590</x>
-        <y>300</y>
-        <width>311</width>
+        <y>210</y>
+        <width>321</width>
         <height>71</height>
        </rect>
       </property>
@@ -58,7 +58,7 @@
        <rect>
         <x>590</x>
         <y>710</y>
-        <width>311</width>
+        <width>321</width>
         <height>71</height>
        </rect>
       </property>
@@ -70,21 +70,21 @@
       <property name="geometry">
        <rect>
         <x>590</x>
-        <y>520</y>
-        <width>311</width>
+        <y>410</y>
+        <width>321</width>
         <height>71</height>
        </rect>
       </property>
       <property name="text">
-       <string>Benchmark</string>
+       <string>Benchmark files</string>
       </property>
      </widget>
      <widget class="QLabel" name="pageName">
       <property name="geometry">
        <rect>
-        <x>650</x>
-        <y>60</y>
-        <width>191</width>
+        <x>0</x>
+        <y>30</y>
+        <width>1501</width>
         <height>91</height>
        </rect>
       </property>
@@ -95,6 +95,22 @@ font-family: Roboto;</string>
       </property>
       <property name="text">
        <string>Main menu</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="benchSorting">
+      <property name="geometry">
+       <rect>
+        <x>590</x>
+        <y>510</y>
+        <width>321</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Benchmark sorting</string>
       </property>
      </widget>
     </widget>
