--- a/WiT/WiT/tests.ui
+++ b/WiT/WiT/tests.ui
@@ -16,10 +16,10 @@
   <widget class="QLabel" name="pageName_3">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>-10</y>
-     <width>191</width>
-     <height>141</height>
+     <x>0</x>
+     <y>10</y>
+     <width>1501</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -28,7 +28,10 @@ font-size: 35px;
 font-family: Roboto;</string>
    </property>
    <property name="text">
-    <string>Benchmark</string>
+    <string>Benchmark files</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_3">
